src/pages/sidebar/index.scss
@import "../vars";
@import "../responsive";

// pass variables to react component
:export {
  cssTileOffsetWidth: $gutterSmallWidth / 2;
}

.sidebar {
  background-color: $colorWhite;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 300;
  min-height: 100vh;
  width: 100%;
}

.sidebar-header {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 60px;
  position: relative;
}

.sidebar-title {
  @include titleMedium;
  max-width: 320px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-align: center;
  margin-left: -16px;
  &:before {
    content: '';
    display: inline-block;
    width: 8px;
    height: 8px;
    background-color: transparent;
    border-radius: 50%;
    margin: 0 8px 1px 0;
  }
}

.sidebar-title-exact {
  &:before {
    background-color: $colorGreen;
  }
}

.sidebar-title-medium {
  &:before {
    background-color: $colorYellow;
  }
}

.sidebar-close {
  cursor: pointer;
  width: 16px;
  height: 16px;
  position: absolute;
  right: 21px;
  transition: transform 0.5s ease;
  top: 20px;
  i {
    svg {
      width: 16px;
      height: 16px;
    }
  }
  &:hover {
    transform: scale(1.1);
  }
}

.sidebar-image {
  overflow: hidden;
  max-height: 370px;

  @media (max-width: $phoneBreakpoint) {
    max-width: 150px;
    margin: auto;
  }
}

.sidebar-photos {
  padding: 20px 24px 8px 24px;
  box-sizing: border-box;
  display: flex;
  overflow: hidden;
}

.sidebar-photo {
  width: 32px;
  height: 32px;
  min-width: 32px;
  min-height: 32px;
  border-radius: 4px;
  background-color: $colorGrayLight;
  background-size: cover;
  position: relative;
  cursor: pointer;
  transition: transform 0.2s ease;
  backface-visibility: hidden;
  margin-right: 8px;
  border: 1px solid transparent;
  &:hover {
    transform: scale(1.1);
  }
}

.sidebar-photo-active {
  border: 1px solid $colorGreen;
}

.sidebar-panel {
  padding: 24px;
  box-sizing: border-box;
  border-bottom: 1px solid $colorGrayLighter;
}

.sidebar-brand {
  @include link;
  @include bodyRegular;
  display: inline-block;
}

.sidebar-title2 {
  @include titleMedium;
  margin-top: 7px;
}

.sidebar-cost {
  @include bodyMedium;
  margin-top: 5px;
}

.sidebar-options {
  margin: 35px 0 0 0;
}

.sidebar-add {
  @include btnBig;
  @include btnGreen;
  width: 100%;
}

.sidebar-footer {
  padding: 24px;
  box-sizing: border-box;
  border-bottom: 1px solid $colorGrayLighter;
  display: flex;
  align-items: center;
}

.sidebar-stars {
  @include btnMedium($icon: true);
}

.sidebar-stars-stared {
  @include btnMedium($icon: true);
  @include btnYellow;
}

.sidebar-users {
  margin-left: 16px;
}

.sidebar-share {
  @include btnMediumRound(true);
  margin-left: auto;
}

.sidebar-panel-title {
  @include titleMedium;
  margin-bottom: 14px;
}

.sidebar-description {
  @include bodyRegular($colorGrayDark);
  &>div {
    margin-bottom: 16px;
    &:last-child {
      margin-bottom: 0;
    }
  }
}

.sidebar-seens {
  box-sizing: border-box;
  display: flex;
  overflow: hidden;
}

.sidebar-seen {
  @include product;
}

.sidebar-similars {
  box-sizing: border-box;
  display: flex;
  overflow: hidden;
}

.sidebar-similar {
  @include product;
}

.tracking {
  display: none;
}
//large desktop view
@media (min-width: $lgDesktopBreakpoint) {

}
//tablet landscape view
@media (max-width: $desktopBreakpoint - 1) {

}
//tablet portrait view
@media (max-width: $tabletLandscapeBreakpoint - 1) {

}
//phone view
@media (max-width: $phoneBreakpoint) {
  .sidebar-title {
    max-width: 200px;
    font-size: 14px;
  }
}

